[gd_scene load_steps=2 format=3 uid="uid://b8qxvw7n8qxqy"]

[ext_resource type="Script" path="res://ui/login_panel.gd" id="1_0x8qy"]

[node name="LoginPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x8qy")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "BaseKit Login"
horizontal_alignment = 1

[node name="ConnectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Connect with Base"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Not connected"
horizontal_alignment = 1

[node name="AddressLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Address: "
horizontal_alignment = 1
visible = false

[node name="BaseNameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Base Name: "
horizontal_alignment = 1
visible = false